fixed Band header v-align issue

--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -78,6 +78,9 @@ th {
 			border-bottom: 0;
 		}
 	}
+	ul {
+		margin: -1px 0 !important;
+	}
 }
 td {
 	&.buttons {
